--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <button class="Button" onClick="refresh()">
+            reset
+        </button>
                 <div class="meal" id="meal"></div>
+
+                
+
+                <script>
+                    function refresh(){
+                        location.reload();
+                    }
+                </script>
     </body>
 </html>
