updated button text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
                 <div class="ButtonDiv">
                     <button class="Button" onClick="refresh()">
-                        reset
+                        New Suggestion
                     </button>
                 </div>
                 
